--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <a class="item" data-tab="tab-home"><i class="el-icon-s-home"></i>首页</a>
                 <a class="item" data-tab="tab-about">关于乐盟健康</a>
                 <a class="item" data-tab="tab-healthmanage">智能健康管理</a>
-                <a class="item" href="http://localhost:9999">爱健康新消费</a>
+                <a class="item" href="http://ailemong.com/mall">爱健康新消费</a>
                 <a class="item" data-tab="tab-contactus">联系方式</a>
             </div>
         </div>
@@ -513,7 +513,7 @@
                 <p>QQ：2480929803</p>
                 <p></p>
                 <img width="100px" height="100px;"
-                     src="https://api.ai2hit.com/static/ai2hit/images/logo/ai2hitCode.png"/>
+                     src="images/qrcode.jpg"/>
             </el-col>
         </el-row>
     </footer>
@@ -525,13 +525,10 @@
 </div><!-- App ID ends -->
 </body>
 <!-- 先引入 Vue -->
-<script src="https://api.ai2hit.com/static/ai2hit/js/vue.js"></script>
-<!--这两个不是一样的吗？-->
-<!--<script src="https://unpkg.com/vue/dist/vue.js"></script>-->
+<script src="https://unpkg.com/vue/dist/vue.js"></script>
 <!--<script src="https://unpkg.com/vue"></script>-->
 <!-- 引入组件库 -->
-<!--<script src="https://unpkg.com/element-ui/lib/index.js"></script>-->
-<script src="https://api.ai2hit.com/static/ai2hit/js/index.js"></script>
+<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 <script>
 	$(window).on('load', function () {
 		$('.slideshow', '.content').hide(0).delay(2000).show(0);
