随便搞了搞

--- a/index.html
+++ b/index.html
@@ -150,29 +150,29 @@
 
         /*option child 1,2 are pointing to the arrow, so starting from 3*/
         .el-carousel__item:nth-child(3) {
-            background-image: url("https://api.ai2hit.com/static/ai2hit/images/slides/genetest.jpg");
+            background-image: url("images/slides/miya.png");
             background-size: cover;
         }
 
         .el-carousel__item:nth-child(4) {
-            background-image: url("https://api.ai2hit.com/static/ai2hit/images/slides/jianshen.jpg");
+            background-image: url("images/slides/wgblf2.jpg");
             background-size: cover;
         }
 
         .el-carousel__item:nth-child(5) {
-            background-image: url("https://api.ai2hit.com/static/ai2hit/images/slides/wangqiu.jpg");
+            background-image: url("images/slides/wgblf.jpg");
             background-size: cover;
         }
 
-        .el-carousel__item:nth-child(6) {
-            background-image: url("https://api.ai2hit.com/static/ai2hit/images/slides/ai.jpg");
-            background-size: cover;
-        }
+        /*.el-carousel__item:nth-child(6) {*/
+        /*    background-image: url("https://api.ai2hit.com/static/ai2hit/images/slides/ai.jpg");*/
+        /*    background-size: cover;*/
+        /*}*/
 
-        .el-carousel__item:nth-child(7) {
-            background-image: url("https://api.ai2hit.com/static/ai2hit/images/slides/meilejia.png");
-            background-size: cover;
-        }
+        /*.el-carousel__item:nth-child(7) {*/
+        /*    background-image: url("https://api.ai2hit.com/static/ai2hit/images/slides/meilejia.png");*/
+        /*    background-size: cover;*/
+        /*}*/
 
         .slidecontent {
             margin: 3% 5%;
@@ -308,25 +308,14 @@
 
         <el-carousel :interval="5000" arrow="always">
 
-            <el-carousel-item>
+            <el-carousel-item></el-carousel-item>
+            <el-carousel-item></el-carousel-item>
+            <el-carousel-item></el-carousel-item>
 
-            </el-carousel-item>
-
-            <el-carousel-item>
-
-            </el-carousel-item>
-
-            <el-carousel-item>
-
-            </el-carousel-item>
-
-            <el-carousel-item>
-
-            </el-carousel-item>
-
-            <el-carousel-item>
-
-            </el-carousel-item>
+            <!--            <el-carousel-item>-->
+            <!--            </el-carousel-item>-->
+            <!--            <el-carousel-item>-->
+            <!--            </el-carousel-item>-->
 
         </el-carousel>
     </div>
