--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 <a class="item" data-tab="tab-home"><i class="el-icon-s-home"></i>首页</a>
                 <a class="item" data-tab="tab-about">关于乐盟健康</a>
                 <a class="item" data-tab="tab-healthmanage">智能健康管理</a>
-                <a class="item" href="http://ailemong.com/mall">爱健康新消费</a>
+                <a class="item" href="http://shop.ailemong.com">爱健康新消费</a>
                 <a class="item" data-tab="tab-contactus">联系方式</a>
             </div>
         </div>
